# MatchAnno

./: CMakeLists.txt  README.md
Sources/: AnnoTool.cpp  AnnoTool.h  MainMark.cpp  MainMark.h  MainScene.cpp  MainScene.h  MainView.cpp  MainView.h  MiniMark.cpp  MiniMark.h  MiniScene.cpp  MiniScene.h  MiniView.cpp  MiniView.h  MyTableWidget.cpp  MyTableWidget.h  main.cpp
Sources/Resources/: icon.icns  resources.qrc
